# finale

./: .dockerignore  .gitignore  Dockerfile  LICENSE
.github/actions/deploy/: action.yaml
.github/workflows/: dev.yaml
backend/: README.md  pyproject.toml
backend/app/: config.py  main.py  mc.py  routers.py  streamable_http_mcp.py
backend/app/agents/: base.py  chat.py  prompts.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/components/: ChatConversation.tsx  ChatMarkdown.tsx  ThinkingStepsPanel.tsx
frontend/lib/: branding.ts  chatApi.ts  publicApiBase.ts
frontend/pages/: _app.tsx  chat.tsx  index.tsx
frontend/styles/: globals.css
terraform/: .gitignore  checks.tf  locals.tf  variables.tf  versions.tf
