[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finale"
version = "0.1.0"
description = "Finale skeleton: FastAPI + static frontend on App Runner"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
    "openai-agents>=0.0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
